--- a/environment.yml
+++ b/environment.yml
@@ -51,7 +51,7 @@ dependencies:
     - guzzle-sphinx-theme==0.7.11
     - sphinx-glpi-theme==0.3
     - sphinx-rtd-theme==0.4.3
-    - bionetgen==2.5.0
+    - bionetgen
     - python==3.7.4
     - numpy==1.16.4
     - numpy-base==1.16.4
